# ozonide

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  build.rs  memory.x
.cargo/: config.toml
.devcontainer/: .env.example  Dockerfile  devcontainer.json
.devcontainer/setup-scripts/: setup-debugger.sh  setup-git.sh
configs/: default.toml
examples/: blink.rs  clock_asm_delay.rs  clock_systick.rs  logging.rs  max_speed.rs
firmware/: Cargo.toml  build.rs
firmware/src/: executors.rs  main.rs
firmware/src/drivers/imu/icm42688p/: config.rs  mod.rs  registers.rs
firmware/src/tasks/: imu_task.rs
ozonide-core/: Cargo.toml  README.md
ozonide-core/src/: lib.rs  topics.rs
ozonide-core/src/config/: mod.rs  vehicle_config.rs
ozonide-core/src/control/: allocation.rs  mod.rs
ozonide-core/src/control/cascaded_pid/: angle_pid.rs  mod.rs  pid.rs  rate_pid.rs
ozonide-core/src/control/cascaded_pid_controller/: controller.rs  mod.rs  pid.rs
ozonide-core/src/control/indi/: allocation.rs  angular_rate_conditioning.rs  angular_rate_controller.rs  angular_velocity_controller.rs  attitude_controller.rs  cascaded_controller.rs  incremental_inversion.rs  input_signal_conditioning.rs  inverse_actuator_model.rs  mod.rs  motor_output_map.rs  specific_force_conditioning.rs  thrust_vector_decomposition.rs  velocity_controller.rs
ozonide-core/src/control/pid/: angular_velocity_controller.rs  attitude_controller.rs  controller.rs  mod.rs
ozonide-core/src/estimation/: complementary_attitude_estimator.rs  complementary_filter.rs  mod.rs  passthrough_state_estimator.rs
ozonide-core/src/filter/: README.md  band_filters.rs  biquadratic_filter.rs  filter_chain.rs  filter_family.rs  mod.rs  pole_placement.rs
ozonide-core/src/msgs/: actuator_command.rs  actuator_telemetry.rs  attitude_setpoint.rs  battery_status.rs  control_demand.rs  ground_truth.rs  imu_data.rs  mod.rs  motor_telemetry.rs  setpoints.rs  vehicle_state.rs
ozonide-core/src/tasks/: actuator_task.rs  actuator_telemetry_task.rs  control_task.rs  imu_task.rs  mod.rs  rate_monitor.rs  state_estimation_task.rs
ozonide-core/src/traits/: actuator_sink.rs  actuator_telemetry_source.rs  controller.rs  imu_source.rs  mod.rs  setpoint_source.rs  state_estimator.rs
simulator/: Cargo.toml  TODOS.md
simulator/src/: main.rs
simulator/src/app/: index.html  mod.rs  server.rs  ws_server.rs
simulator/src/models/: actuator_model.rs  disturbance_model.rs  imu_model.rs  mod.rs
simulator/src/physics/: mod.rs  parameters.rs  physics.rs  state.rs
sitl/: Cargo.toml
sitl/src/: actuator_simulated.rs  actuator_telemetry_simulated.rs  ground_truth_simulated.rs  imu_simulated.rs  main.rs  setpoint_simulated.rs
sitl/src/tasks/: actuator_task.rs  actuator_telemetry_task.rs  control_task.rs  flight_controller_task.rs  ground_truth_task.rs  imu_task.rs  mod.rs  state_estimation_task.rs
src/: board.rs  config.rs  executors.rs  main.rs  topics.rs  vehicle.rs
src/algorithms/: mod.rs
src/algorithms/mpc/: mod.rs
src/algorithms/ukf/: mod.rs
src/algorithms/vio/: mod.rs
src/board/: mod.rs  stm32h743vit6.rs  traits.rs
src/drivers/: mod.rs
src/drivers/camera/: mod.rs
src/drivers/esc/: mod.rs
src/drivers/imu/: icm42688p.rs  mod.rs
src/drivers/imu/icm42688p/: config.rs  mod.rs  registers.rs
src/messaging/: mod.rs  msgs.rs  topics.rs
src/msgs/: imu_sample.rs  mod.rs
src/tasks/: imu_task.rs  mod.rs
src/tasks/control_loop/: mod.rs
src/tasks/sensor_fusion/: mod.rs
src/types/: imu.rs  imu_data.rs  mod.rs  vector.rs
src/utils/: mod.rs  timing.rs
tools/bode-plot/: Cargo.toml
tools/bode-plot/src/: main.rs
tools/open-loop-commander/: Cargo.toml
tools/open-loop-commander/src/: main.rs
