[workspace]
members = ["firmware", "ozonide-core", "sitl", "simulator"]
default-members = ["ozonide-core", "sitl", "simulator"]
resolver = "2"

[workspace.dependencies]
embassy-stm32    = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-time     = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync     = { git = "https://github.com/embassy-rs/embassy" }
