[workspace]
members = ["firmware", "ozonide-core", "sitl", "simulator", "tools/open-loop-commander", "tools/bode-plot"]
default-members = ["ozonide-core", "sitl", "simulator"]
resolver = "2"

[workspace.dependencies]
embassy-stm32    = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-time     = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync     = { git = "https://github.com/embassy-rs/embassy" }
