[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
ozonide-core = { path = "../ozonide-core", features = ["defmt"] }

embassy-stm32    = { workspace = true, features = ["rt", "defmt", "stm32h743vi", "time-driver-tim5", "exti"] }
embassy-executor = { workspace = true, features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time     = { workspace = true, features = ["defmt"] }
embassy-sync     = { workspace = true, features = ["defmt"] }

embedded-hal       = "1.0"
embedded-hal-async = "1.0"
embedded-hal-bus   = { version = "0.3", features = ["async"] }
cortex-m         = { version = "0.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt      = "0.7"
defmt            = "0.3"
defmt-rtt        = "0.4"
panic-probe      = { version = "0.3", features = ["print-defmt"] }
static_cell      = "2"

[build-dependencies]
toml = "1.1.2"
