[package]
name = "ozonide-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
defmt = ["dep:defmt"]

[dependencies]
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
serde  = { version = "1.0", default-features = false, features = ["derive"] }
defmt  = { version = "0.3", optional = true }
