[package]
name = "ozonide-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
std = ["nalgebra/std"]
defmt = ["dep:defmt"]
log   = ["dep:log"]


[dependencies]
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
serde  = { version = "1.0", default-features = false, features = ["derive"] }
defmt  = { version = "0.3", optional = true }
log    = { version = "0.4", optional = true, default-features = false }
nalgebra = { version = "0.35.0", default-features = false, features = ["libm", "serde-serialize-no-std"] }
libm     = "0.2"