[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
ozonide-core = { path = "../ozonide-core" }
tokio        = { version = "1", features = ["full"] }
postcard     = { version = "1", default-features = false, features = ["use-std"] }
rand         = "0.10.1"
rand_distr   = "0.6.0"
axum         = { version = "0.7", features = ["ws"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
nalgebra = { version = "0.35.0", features = ["std"] }