[package]
name = "sitl"
version = "0.1.0"
edition = "2021"

[dependencies]
ozonide-core     = { path = "../ozonide-core", features = ["log"] }
embassy-executor = { workspace = true, features = ["platform-std", "executor-thread"] }
embassy-time     = { workspace = true, features = ["std"] }
critical-section = { version = "1", features = ["std"] }
static_cell      = "2"
postcard         = "1"
log              = "0.4"
env_logger       = "0.11"
